# stcm2-asm

./: .gitattributes  Cargo.toml  LICENSE.MIT  README.md  cpa.config.yaml
asms/: _analyze.py  _cycle.py  _dijkstra.py
reasms/: advfont.txt  analyze.py
src/: asm.rs  disasm.rs  main.rs  stcm2.rs
