[package]
name = "stcm2-asm"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
base64 = "0.22"
encoding_rs = "0.8"
bytes = "1.6"
anyhow = "1"
regex = "1.11"
indexmap = "2.11"
bstr = "1.12"
saphyr = "0.0.6"
bimap = "0.6"

[profile.release]
overflow-checks = true